[tool.poetry]
name = "yaylib"
version = "1.5.4"
description = "同世代と趣味の通話コミュニティ - Yay! (イェイ) で投稿やタイムラインの取得、リツイートやいいねの実行、フォローや投稿の検索など様々な機能をPythonプログラムから利用可能なAPIクライアントツールです。"
authors = ["ekkx <nikola.desuga@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ekkx/yaylib"
repository = "https://github.com/ekkx/yaylib"
keywords = [
    "yay",
    "yaylib",
    "api",
    "bot",
    "tool",
    "client",
    "library",
    "wrapper",
    "ボット",
    "ライブラリ",
    "ツール"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
aiohttp = "^3.11.0"
pillow = "^11.2.0"
cryptography = "^44.0.0"

[tool.poetry.group.dev.dependencies]
sphinx = "8.0.2"
shibuya = "2024.8.21"
sphinx_copybutton = "0.5.2"
sphinx-design = "0.6.1"

[tool.poetry-version-plugin]
source = "init"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
